# fl_muse_brainflow_MVP

./: .gitignore  .metadata  README.md  agents.md  flutter_rust_bridge.yaml  justfile  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/fl_muse_connection_test/: MainActivity.kt
android/app/src/main/kotlin/com/windwerfer/fl_muse_brainflow_mvp/: MainActivity.kt
code_to_port/amused/: .gitignore  DESCRIPTION.md  LICENSE  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  TEST_STATUS.md  __init__.py  muse_data_parser.py  muse_discovery.py  muse_discovery_gui.py  muse_exact_client.py  muse_fnirs_processor.py  muse_integrated_parser.py  muse_ppg_heart_rate.py  muse_raw_stream.py  muse_realtime_decoder.py  muse_replay.py  muse_sleep_client.py  muse_sleep_parser.py  muse_stream_client.py  muse_visualizer.py  pyproject.toml  requirements-viz.txt  run_tests.py  setup.py
code_to_port/amused/examples/: 01_basic_streaming.py  02_full_sensors.py  03_parse_data.py  04_stream_with_callbacks.py  05_save_and_replay.py  06_heart_monitor.py  07_lsl_style_viz.py  09_frequency_display.py
code_to_port/amused/tests/: real_test_data.py  record_test_data.py  test_integration.py  test_minimal.py  test_ppg_fnirs.py  test_ppg_fnirs_fast.py  test_raw_stream.py  test_realtime_decoder.py
code_to_port/amused/tests/test_data/: muse_20250824_172756_samples.json
lib/: main.dart
lib/screens/: muse_chart_screen.dart
lib/services/: muse_ble_service.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  muse_parser.dart  muse_types.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
rust/: Cargo.toml  build.rs
rust/src/: android_jni.rs  api.rs  frb_generated.rs  lib.rs  muse_parser.rs  muse_types.rs
test/: widget_test.dart
tool/: build.dart
tools/: build.py  doctor.py
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
