[package]
name = "rust_lib_fl_muse_brainflow_mvp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
brainflow = { path = "../packages/brainflow" }
anyhow = "1.0.101"
log = "0.4.29"
env_logger = "0.11.6"
chrono = { version = "0.4.38", features = ["std"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"

[build-dependencies]
# build.rs uses std and env, no extra crates needed for now
