[build-system]
requires = ["setuptools==76.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amused"
version = "1.0.2"
authors = [
    {name = "Adrian Tadeusz Belmans", email = "adrian.belmans@gmail.com"},
]
description = "Open-source Python library for streaming data from Muse S (Athena) EEG headbands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "muse",
    "eeg",
    "ppg",
    "fnirs",
    "biometrics",
    "neuroscience",
    "brain-computer-interface",
    "bci",
    "bluetooth",
    "ble",
    "biosignals",
    "heart-rate",
    "meditation",
    "sleep-monitoring"
]
dependencies = [
    "bleak>=0.21.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.22",
]

[project.urls]
Homepage = "https://github.com/nexon33/amused"
Documentation = "https://github.com/nexon33/amused#readme"
Repository = "https://github.com/nexon33/amused"
Issues = "https://github.com/nexon33/amused/issues"

[tool.setuptools]
py-modules = [
    "muse_data_parser",
    "muse_discovery",
    "muse_discovery_gui",
    "muse_exact_client",
    "muse_fnirs_processor",
    "muse_integrated_parser",
    "muse_ppg_heart_rate",
    "muse_raw_stream",
    "muse_realtime_decoder",
    "muse_replay",
    "muse_sleep_client",
    "muse_sleep_parser",
    "muse_stream_client",
    "muse_visualizer"
]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]